Fixed issue where dashboard would overflow on smaller laptop screens. Fonts now scale according to device width to fix the issue.

--- a/styles/main.css
+++ b/styles/main.css
@@ -225,32 +225,33 @@ form input[type="submit"] {
   align-items: center;
   background-image: url("../images/course-aerial.jpg");
   background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
 .dash-grid {
-  width: 95vw;
-  height: 95vh;
+  width: 85vw;
+  height: 85vh;
   display: grid;
   grid-template-columns: 1fr 5fr;
   font-family: "Prompt", sans-serif;
-  margin: 1rem;
   border-radius: 25px;
 }
 
 .dash-nav {
   display: flex;
   flex-direction: column;
-  background-color: rgba(78, 171, 230, 0.7);
+  background-color: rgba(78, 171, 230, 0.8);
   border-right: 5px solid #47e77a;
   border-radius: 25px 0 0 25px;
   color: white;
-  font-size: 1.5rem;
   font-weight: normal;
   padding: 1rem;
 }
 
 .dash-nav a {
   color: white;
+  font-size: 1.5vmax;
 }
 
 .nav-elem {
@@ -267,19 +268,21 @@ form input[type="submit"] {
 }
 
 .nav-elem-heading {
-  font-size: 1.5rem;
+  font-size: 2.5vmin;
   font-weight: normal;
   margin-left: 1rem;
+  white-space: nowrap;
 }
 
-.dash-profile {
-  border: 2px solid #47e77a;
+/* .dash-profile {
+  border: 3px solid #47e77a;
   margin: 1rem 1rem 5rem 1rem;
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
+  width: 80%;
+  padding-top: 80%;
   align-self: center;
-}
+  background-color: white;
+} */
 
 .dash-options {
   display: flex;
@@ -302,9 +305,10 @@ form input[type="submit"] {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  grid-gap: 3rem;
   gap: 3rem;
   padding: 3rem;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 0 25px 25px 0;
 }
 
@@ -318,7 +322,7 @@ form input[type="submit"] {
   color: white;
   text-align: center;
   font-weight: normal;
-  font-size: 2rem;
+  font-size: 1.5vw;
 }
 
 /*
